<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editor.PackageEditorFragment">

    <EditText
        android:id="@+id/titleEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_title"
        android:drawablePadding="10dp"
        android:background="@color/lightYellow"
        android:padding="10dp"
        android:hint="@string/title"
        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_category"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="Category"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/languageTv" />

    <Spinner
        android:id="@+id/categorySp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/categories"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/categoryTv"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/languageSp"
        app:layout_constraintTop_toTopOf="@+id/categoryTv" />

    <EditText
        android:id="@+id/iconUrlEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_link"
        android:drawablePadding="10dp"
        android:background="@color/lightYellow"
        android:padding="10dp"
        android:hint="@string/icon"
        android:inputType="textUri"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/categorySp" />

    <Spinner
        android:id="@+id/levelSp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:entries="@array/levels"
        app:layout_constraintBottom_toBottomOf="@+id/levelTv"
        app:layout_constraintEnd_toEndOf="@+id/iconUrlEt"
        app:layout_constraintStart_toEndOf="@+id/languageTv"
        app:layout_constraintTop_toTopOf="@+id/levelTv" />

    <Spinner
        android:id="@+id/languageSp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:entries="@array/languages"
        app:layout_constraintBottom_toBottomOf="@+id/languageTv"
        app:layout_constraintEnd_toEndOf="@+id/levelSp"
        app:layout_constraintStart_toEndOf="@+id/languageTv"
        app:layout_constraintTop_toTopOf="@+id/languageTv" />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="0dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightYellow"
        android:drawableLeft="@drawable/ic_description"
        android:drawablePadding="10dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/titleEt" />

    <TextView
        android:id="@+id/levelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_level"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/level"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />

    <TextView
        android:id="@+id/languageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_language"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/language"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/levelTv" />


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Next"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideRight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>
